--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="docs/Recent.html">Recent</a></li>
         	        <li><a href="docs/Contact.html">Questions, Comments, Concerns?</a></li>
 			<li><a href="docs/About.html">All other inquiries, please click here.</a></li>
-			<li><a href="docs/event.html">If you wish to create an event, click here!</a></li>
+			<li><a href="docs/Event.html">If you wish to create an event, click here!</a></li>
 			<li><a href="docs/videoaudio.html">Video/Audio assignment</a></li>
 			<div id="content">
     </ul>
